Unit 8/McDonaldas/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\apcslib.jar;C:\Program Files (x86)\BlueJ\lib\userlib\chndocs.jar;C:\Program Files (x86)\BlueJ\lib\userlib\chnutil.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;E:\APComSci\Unit 8\McDonaldas
-d
E:\APComSci\Unit 8\McDonaldas\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
E:\APComSci\Unit 8\McDonaldas\FoodItem.java
<---- end of javadoc command ---->
Loading source file E:\APComSci\Unit 8\McDonaldas\FoodItem.java...
Constructing Javadoc information...
E:\APComSci\Unit 8\McDonaldas\FoodItem.java:12: error: cannot find symbol
public class FoodItem extends JButton implements Clckable
                                                 ^
  symbol: class Clckable
Standard Doclet version 1.8.0_40
Building tree for all the packages and classes...
Generating E:\APComSci\Unit 8\McDonaldas\doc\FoodItem.html...
Generating E:\APComSci\Unit 8\McDonaldas\doc\package-frame.html...
Generating E:\APComSci\Unit 8\McDonaldas\doc\package-summary.html...
Generating E:\APComSci\Unit 8\McDonaldas\doc\constant-values.html...
Generating E:\APComSci\Unit 8\McDonaldas\doc\serialized-form.html...
Building index for all the packages and classes...
Building index for all classes...
Generating E:\APComSci\Unit 8\McDonaldas\doc\allclasses-frame.html...
Generating E:\APComSci\Unit 8\McDonaldas\doc\allclasses-noframe.html...
Generating E:\APComSci\Unit 8\McDonaldas\doc\index.html...
Generating E:\APComSci\Unit 8\McDonaldas\doc\stylesheet.css...
1 warning
